# specific_billiards

./: .gitignore
notebooks/: BilliardBoundary.ipynb  pyproject.toml
old-src/oval-like/: .gitignore  EpsilonVLambda.ipynb  Lyapunov_Exponents.ipynb  README.md  TrajectoryPhaseSpace.ipynb  billiard_engine.py  billiard_results.npz  irregular_boundary_billiard.ipynb  patch_sweep.py  pyproject.toml  requirements.txt  run_epsilon_sweep.py  run_lyapunov_converge.py  telemetry.py  test_billiard_engine.py
old-src/oval-like/.claude/worktrees/suspicious-mestorf-92f978/: .gitignore
old-src/oval-like/.claude/worktrees/suspicious-mestorf-92f978/.ipynb_checkpoints/: irregular_boundary_billiard-checkpoint.ipynb
old-src/oval-like/.claude/worktrees/suspicious-mestorf-92f978/oval-like/: .gitignore  EpsilonVLambda.ipynb  Lyapunov_Exponents.ipynb  README.md  TrajectoryPhaseSpace.ipynb  billiard_engine.py  merge_results.py  run_epsilon_sweep.py  run_epsilon_sweep_hpc.py  run_lyapunov_sim.py  slurm_epsilon_sweep.sh  submit_slurm_script.sh  telemetry.py  test_billiard_engine.py
oval_like/: README.md  pyproject.toml
oval_like/src/oval_like/: __init__.py
oval_like/tests/: test_ovallike.py
